--- a/package.json
+++ b/package.json
@@ -18,15 +18,23 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:create": "./node_modules/.bin/typeorm-ts-node-esm migration:create",
+    "migrate": "npm run build && ./node_modules/.bin/typeorm  migration:run -d dist/typeORM.dataSource.js",
+    "migrate:undo": "npm run build && ./node_modules/.bin/typeorm  migration:revert -d dist/typeORM.dataSource.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "config": "^3.3.11",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
