--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "config": "^3.3.11",
+    "moment": "^2.30.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^9.0.1",
     "webpack": "^5.91.0"
   },
   "devDependencies": {
